--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Little Lemon Restaurant"/>
+    <meta name="og:description" content="A healthy and ridiculolsy delicious lemon desserts"/>
+    <meta name="description" content="A healthy and ridiculolsy delicious lemon desserts"/>
+    <meta name="og:image" content="./src/assets/icons_assets/restaurant.jpg"/>
     <title>Vite + React + TS</title>
   </head>
   <body>
